Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                     <a href="pneumatik.html">Pneumatik</a>
                     <hr>
                     <a href="sps-grundlagen.html">SPS-Grundlagen</a>
+                    <a
+href="hebel.html">Kräfte</a>
                     <a href="vps-grundlagen.html">VPS-Grundlagen</a>
                     <a href="bussysteme.html">Bussysteme</a>
                     <a href="logo-grundlagen.html">Siemens LOGO!</a>
