Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <hr>
                     <a href="sps-grundlagen.html">SPS-Grundlagen</a>
                     <a
-href="hebel.html">Kräfte</a>
+href="Hebel.html">Kräfte</a>
                     <a href="vps-grundlagen.html">VPS-Grundlagen</a>
                     <a href="bussysteme.html">Bussysteme</a>
                     <a href="logo-grundlagen.html">Siemens LOGO!</a>
