--- a/Hebel.html
+++ b/Hebel.html
@@ -2,41 +2,33 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Hebelgesetz Rechner mit Wippe</title>
+  <title>Hebelgesetz Rechner</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    /* SVG Wippe zentrieren */
     #wippe-container {
       width: 100%;
-      height: 200px;
+      height: 150px;
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-bottom: 20px;
+      margin-top: 20px;
     }
     svg {
       overflow: visible;
     }
+    #hebel {
+      transform-origin: 150px 50px;
+      transition: transform 0.6s ease;
+    }
+    #mass-left, #mass-right {
+      transition: cy 0.6s ease;
+    }
   </style>
 </head>
-<body class="bg-gradient-to-r from-indigo-100 via-white to-blue-100 min-h-screen flex flex-col items-center justify-start font-sans pt-10">
+<body class="bg-gradient-to-r from-indigo-100 via-white to-blue-100 min-h-screen flex items-center justify-center font-sans">
 
   <div class="bg-white shadow-2xl rounded-2xl p-10 max-w-xl w-full">
     <h1 class="text-3xl font-bold text-center mb-6 text-indigo-700">⚖️ Hebelgesetz Rechner</h1>
-
-    <!-- Wippe -->
-    <div id="wippe-container">
-      <svg width="300" height="100">
-        <!-- Hebel -->
-        <rect id="hebel" x="50" y="45" width="200" height="10" fill="#4f46e5" rx="5" ry="5" transform-origin="150 50"/>
-        <!-- Fulcrum / Drehpunkt -->
-        <polygon points="145,55 155,55 150,80" fill="#000"/>
-        <!-- Linke Masse -->
-        <circle id="mass-left" cx="50" cy="50" r="15" fill="#f87171"/>
-        <!-- Rechte Masse -->
-        <circle id="mass-right" cx="250" cy="50" r="15" fill="#34d399"/>
-      </svg>
-    </div>
 
     <!-- Eingabeformular -->
     <div class="space-y-4">
@@ -65,16 +57,30 @@
       Ergebnis erscheint hier...
     </div>
 
+    <!-- Wippe -->
+    <div id="wippe-container">
+      <svg width="300" height="100">
+        <!-- Hebel -->
+        <rect id="hebel" x="50" y="45" width="200" height="10" fill="#4f46e5" rx="5" ry="5"/>
+        <!-- Fulcrum / Drehpunkt -->
+        <polygon points="145,55 155,55 150,80" fill="#000"/>
+        <!-- Linke Masse -->
+        <circle id="mass-left" cx="50" cy="50" r="15" fill="#f87171"/>
+        <!-- Rechte Masse -->
+        <circle id="mass-right" cx="250" cy="50" r="15" fill="#34d399"/>
+      </svg>
+    </div>
+
     <!-- Beispielaufgabe -->
     <div class="mt-8 border-t pt-6">
-      <h2 class="text-xl font-bold text-gray-800 mb-2">📘 Beispielaufgabe</h2>
+      <h2 class="text-xl font-bold text-gray-800 mb-2">📘 Beispielaufgabe & Berechnung</h2>
       <p class="text-gray-700">
         Eine Person mit <b>85 kg</b> sitzt auf der linken Seite, eine Person mit <b>14 kg</b> auf der rechten Seite in <b>2 m</b> Abstand.
         <br><br>
-        Gesucht ist der Abstand <b>l1</b> der schweren Person.  
+        Gesucht ist der Abstand <b>l1</b> der schweren Person.
       </p>
-      <p class="mt-3 font-semibold text-indigo-700">
-        Lösung: l1 = (14 × 2) / 85 = 0.329 m ≈ 33 cm
+      <p class="mt-3 font-semibold text-indigo-700" id="formula">
+        Lösung: l1 = (m2 × l2) / m1
       </p>
     </div>
   </div>
@@ -91,20 +97,25 @@
       }
 
       const l1 = (m2 * l2) / m1;
-      document.getElementById("result").innerText = 
-        `➡️ l1 = ${(l1).toFixed(3)} m (≈ ${(l1*100).toFixed(0)} cm)`;
 
-      // Wippe animieren
-      const maxTilt = 15; // max Drehwinkel in Grad
+      // Berechnungsschritte anzeigen
+      document.getElementById("formula").innerHTML = `
+        Berechnung: l1 = (m2 × l2) / m1<br>
+        l1 = (${m2} × ${l2}) / ${m1} = ${l1.toFixed(3)} m ≈ ${(l1*100).toFixed(0)} cm
+      `;
+
+      document.getElementById("result").innerText = 
+        `➡️ l1 = ${l1.toFixed(3)} m (≈ ${(l1*100).toFixed(0)} cm)`;
+
+      // Wippe sanft animieren
+      const maxTilt = 15; // max Drehwinkel
       const tilt = maxTilt * (m2*l2 - m1*l1) / Math.max(m1*l1, m2*l2);
       document.getElementById("hebel").setAttribute("transform", `rotate(${tilt} 150 50)`);
-
-      // Massen nach unten/oben verschieben
       document.getElementById("mass-left").setAttribute("cy", 50 - tilt);
       document.getElementById("mass-right").setAttribute("cy", 50 + tilt);
     }
 
-    // Initiale Anzeige
+    // Initial
     berechneL1();
   </script>
 </body>
